frontend/tests/cases/positive/polySimple.gr
id : forall {a : Type} . a -> a
id x = x

use : Int
use = id 42