frontend/tests/cases/negative/polymorphism/badKind.gr
id : ∀ {a : Nat} . Int → a
id x = x